Fixed header offset on iPhone 5 and landscape phones

--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -1,6 +1,7 @@
 #home-general{
     display: flex;
     flex-direction: column;
+    padding-top: 125px;
 }
 
 .button-general{
@@ -11,7 +12,7 @@
 #text1{
     display: flex;
     flex-direction: column;
-    margin-top: 45vh;
+    margin-top: 32vh;
     margin-left: 5vw;
     width: 40vw;
 }
@@ -109,7 +110,12 @@
     justify-content: center;
 }
 
-@media(max-width: 800px){
+/*Style for smartphones and low res tables*/
+@media (max-width: 750px), (max-height: 750px) and (orientation: landscape){
+    #home-general{
+        padding-top: 100px;
+    }
+
     .line{
         display: flex;
         flex-wrap: wrap;
@@ -133,7 +139,7 @@
         width: 90vw;
         justify-self: center;
         margin-left: 0vw;
-        margin-top: 15vh;
+        margin-top: 2vh;
         margin-bottom: 5vh;
     }
     #text1 h3{
